<resources>
    <string name="app_name">Mobile Programming</string>
    <string name="hello_world">Hello World</string>
    <string name="name_entry">Enter your full name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="text">Text</string>
    <string name="full_name">Full Name</string>
    <string name="na">N/A</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="anonymous">Anonymous</string>
    <string name="logo">Logo</string>
    <string name="frag1">moon fragment</string>
    <string name="frag2"> sun fragment </string>
    <string name="cross">X</string>

    <string-array name="country_list">
        <item>Nepal</item>
        <item>India</item>
        <item>China</item>
        <item>Japan</item>
        <item>Australia</item>
    </string-array>

    <string-array name="planet_list">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
    </string-array>
</resources>