<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_yellow"
    tools:context=".unit_5.ImageFragmentActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/frag1"
            android:textColor="@color/white"
            android:id="@+id/moonfrag" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:backgroundTint="@color/submit"
            android:text="@string/cross"
            android:textColor="@color/white"
            android:id="@+id/back" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cancel"
            android:text="@string/frag2"
            android:textColor="@color/white"
            android:id="@+id/sunfrag"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/pale_yellow"
        android:id="@+id/fragmentSwitchButtomContainer"
        android:name="com.example.mobileprogramming.unit_5.TextFragment"
        android:layout_weight="1"
        tools:layout="@layout/hello_text"
    />

</LinearLayout>