<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_yellow"
    android:paddingHorizontal="25dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbarThumbVertical="@color/teal_700">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cream"
    android:padding="30dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:autofillHints="name"
        android:background="@color/divider"
        android:hint="@string/name_entry"
        android:inputType="text"
        android:textColorHint="@color/dark_grey"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:id="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingText"
        app:layout_constraintWidth_percent="8.9" />

    <TextView
        android:id="@+id/headingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/submit"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintWidth_percent="8.9">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/submit"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:id="@+id/submit_button" />

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:id="@+id/cancel_button"/>

    </LinearLayout>

    <TextView
        android:id="@+id/sportsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="sports_option"
        android:textAlignment="textStart"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout" />

    <LinearLayout
        android:id="@+id/checkboxContainerTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sportsLabel">

        <CheckBox
            android:id="@+id/checkboxFootball"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:buttonTint="@color/submit"
            android:text="football"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkboxBasketball"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:buttonTint="@color/submit"
            android:checked="true"
            android:text="basketball"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxContainerBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/checkboxContainerTop">


        <CheckBox
            android:id="@+id/checkboxVolleyball"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:buttonTint="@color/submit"
            android:text="volleyball"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkboxBadminton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:buttonTint="@color/submit"
            android:text="badminton"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="select gender"
            android:textAlignment="textStart"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkboxContainerBottom" />

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderLabel">

        <RadioButton
            android:id="@+id/genderMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/submit"
            android:text="male"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/genderFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/submit"
            android:text="female"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>

        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="choose_country"
            android:textAlignment="textStart"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderGroup" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/black"
        android:entries="@array/country_list"
        android:hapticFeedbackEnabled="true"
        android:spinnerMode="dialog"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryLabel"
        app:layout_constraintWidth_percent="0.5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="28dp"
        android:contentDescription="weeww"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countrySpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>